--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <title>장비 강화 기대값 계산기</title>
+  <meta charset="UTF-8">
+  <title>디지몬 마스터즈 장비 강화 기대값 계산기</title>
   <style>
     body { font-family: sans-serif; background:#f7f7f7; padding:20px; }
     .container { max-width:900px; margin:auto; background:#fff; padding:20px; border-radius:12px; box-shadow:0 2px 10px rgba(0,0,0,0.05); }
@@ -21,7 +21,7 @@
   <div class="container">
     <h1>디지몬 마스터즈 장비 강화 기대값 계산기</h1>
 
-    <h3>장비 선택 및 그림 업로드</h3>
+    <h3>장비 선택</h3>
     <div>
       <label for="equipSelect">장비 부위:</label>
       <select id="equipSelect">
@@ -34,7 +34,10 @@
     </div>
 
     <div class="grid">
-      <div class="item-card"><div>장비 그림</div><img id="equip-img" /><input type="file" accept="image/*" onchange="loadImage(event, 'equip-img')"></div>
+      <div class="item-card">
+        <div>장비 그림</div>
+        <img id="equip-img" src="" alt="장비 이미지">
+      </div>
     </div>
 
     <h3>강화 단계 설정</h3>
@@ -66,11 +69,29 @@
   </div>
 
   <script>
-    // ===== 하드코딩된 강화 확률 =====
+    // ===== 내부 하드코딩 확률 =====
     const successRates = [0.95,0.9,0.85,0.8,0.75,0.7,0.65,0.6,0.55,0.5,0.45,0.4,0.35,0.3,0.25];
     const breakRates   = [0,0,0,0.01,0.02,0.03,0.05,0.07,0.1,0.12,0.15,0.18,0.2,0.25,0.3];
 
-    // ===== 시작/목표 단계 셀렉트박스 초기화 =====
+    // ===== 이미지 매핑 =====
+    const equipImages = {
+      "머리": "images/head.png",
+      "상의": "images/top.png",
+      "하의": "images/pants.png",
+      "신발": "images/shoes.png",
+      "장갑": "images/gloves.png"
+    };
+
+    const equipSelect = document.getElementById("equipSelect");
+    const equipImg = document.getElementById("equip-img");
+
+    // 장비 선택 시 이미지 자동 변경
+    equipSelect.addEventListener("change", () => {
+      equipImg.src = equipImages[equipSelect.value] || "";
+    });
+    equipImg.src = equipImages[equipSelect.value]; // 초기값
+
+    // ===== 시작/목표 단계 & 비용 테이블 생성 =====
     const startSelect = document.getElementById('startLvl');
     const targetSelect = document.getElementById('targetLvl');
     const costBody = document.getElementById('costTableBody');
@@ -92,14 +113,7 @@
       costBody.appendChild(tr);
     }
 
-    function loadImage(event, id) {
-      const file = event.target.files[0];
-      if(!file) return;
-      const reader = new FileReader();
-      reader.onload = e => { document.getElementById(id).src = e.target.result; };
-      reader.readAsDataURL(file);
-    }
-
+    // ===== 계산 함수 =====
     function calculate() {
       const start = parseInt(startSelect.value);
       const target = parseInt(targetSelect.value);
