--- a/index.html
+++ b/index.html
@@ -18,132 +18,131 @@
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>디지몬 마스터즈 장비 강화 기대값 계산기</h1>
+<div class="container">
+  <h1>디지몬 마스터즈 장비 강화 기대값 계산기</h1>
 
-    <h3>장비 선택</h3>
-    <div>
-      <label for="equipSelect">장비 부위:</label>
-      <select id="equipSelect">
-        <option value="머리">머리</option>
-        <option value="상의">상의</option>
-        <option value="하의">하의</option>
-        <option value="신발">신발</option>
-        <option value="장갑">장갑</option>
-      </select>
-    </div>
-
-    <div class="grid">
-      <div class="item-card">
-        <div>장비 그림</div>
-        <img id="equip-img" src="" alt="장비 이미지">
-      </div>
-    </div>
-
-    <h3>강화 단계 설정</h3>
-    <div style="display:flex; gap:10px; margin-bottom:10px;">
-      <div>
-        <label for="startLvl">시작 단계:</label>
-        <select id="startLvl"></select>
-      </div>
-      <div>
-        <label for="targetLvl">목표 단계:</label>
-        <select id="targetLvl"></select>
-      </div>
-    </div>
-
-    <h3>단계별 비용 입력</h3>
-    <table>
-      <thead>
-        <tr>
-          <th>단계</th>
-          <th>비용</th>
-        </tr>
-      </thead>
-      <tbody id="costTableBody"></tbody>
-    </table>
-
-    <button class="btn" onclick="calculate()">기대값 계산</button>
-
-    <div class="result" id="result"></div>
+  <h3>장비 선택</h3>
+  <div>
+    <label for="equipSelect">장비 부위:</label>
+    <select id="equipSelect">
+      <option value="머리">머리</option>
+      <option value="가방">가방</option>
+      <option value="상의">상의</option>
+      <option value="하의">하의</option>
+      <option value="신발">신발</option>
+      <option value="장갑">장갑</option>
+    </select>
   </div>
 
-  <script>
-    // ===== 내부 하드코딩 확률 =====
-    const successRates = [0.95,0.9,0.85,0.8,0.75,0.7,0.65,0.6,0.55,0.5,0.45,0.4,0.35,0.3,0.25];
-    const breakRates   = [0,0,0,0.01,0.02,0.03,0.05,0.07,0.1,0.12,0.15,0.18,0.2,0.25,0.3];
+  <div class="grid">
+    <div class="item-card">
+      <div>장비 그림</div>
+      <img id="equip-img" src="" alt="장비 이미지">
+    </div>
+  </div>
 
-    // ===== 이미지 매핑 =====
-    const equipImages = {
-      "머리": "IMG/head.png",
-      "상의": "IMG/top.png",
-      "하의": "IMG/pants.png",
-      "신발": "IMG/shoes.png",
-      "장갑": "IMG/gloves.png"
-    };
+  <h3>강화 단계 설정</h3>
+  <div style="display:flex; gap:10px; margin-bottom:10px;">
+    <div>
+      <label for="startLvl">시작 단계:</label>
+      <select id="startLvl"></select>
+    </div>
+    <div>
+      <label for="targetLvl">목표 단계:</label>
+      <select id="targetLvl"></select>
+    </div>
+  </div>
 
-    const equipSelect = document.getElementById("equipSelect");
-    const equipImg = document.getElementById("equip-img");
+  <h3>단계별 비용 입력</h3>
+  <table>
+    <thead>
+      <tr>
+        <th>단계</th>
+        <th>비용</th>
+      </tr>
+    </thead>
+    <tbody id="costTableBody"></tbody>
+  </table>
 
-    // 부위 선택 시 자동 업데이트
-    equipSelect.addEventListener("change", () => {
-      const selected = equipSelect.value;
-      equipImg.src = equipImages[selected] || "";
-    });
+  <button class="btn" onclick="calculate()">기대값 계산</button>
 
-    // 초기 이미지 설정
-    equipImg.src = equipImages[equipSelect.value];
+  <div class="result" id="result"></div>
+</div>
 
-    // ===== 시작/목표 단계 & 비용 테이블 생성 =====
-    const startSelect = document.getElementById('startLvl');
-    const targetSelect = document.getElementById('targetLvl');
-    const costBody = document.getElementById('costTableBody');
+<script>
+  // ===== 내부 하드코딩 확률 =====
+  const successRates = [0.95,0.9,0.85,0.8,0.75,0.7,0.65,0.6,0.55,0.5,0.45,0.4,0.35,0.3,0.25];
+  const breakRates   = [0,0,0,0.01,0.02,0.03,0.05,0.07,0.1,0.12,0.15,0.18,0.2,0.25,0.3];
 
-    for (let i=1; i<=15; i++){
-      const opt1 = document.createElement('option');
-      opt1.value = i;
-      opt1.text = i;
-      startSelect.add(opt1);
+  // ===== 이미지 매핑 =====
+  const equipImages = {
+    "머리": "DMO/IMG/head.png",
+    "가방": "DMO/IMG/bag.png",
+    "상의": "DMO/IMG/top.png",
+    "하의": "DMO/IMG/pants.png",
+    "신발": "DMO/IMG/shoes.png",
+    "장갑": "DMO/IMG/gloves.png"
+  };
 
-      const opt2 = document.createElement('option');
-      opt2.value = i;
-      opt2.text = i;
-      targetSelect.add(opt2);
+  const equipSelect = document.getElementById("equipSelect");
+  const equipImg = document.getElementById("equip-img");
 
-      // 비용 입력 테이블
-      const tr = document.createElement('tr');
-      tr.innerHTML = `<td>${i}</td><td><input type="number" id="cost-${i}" /></td>`;
-      costBody.appendChild(tr);
+  equipSelect.addEventListener("change", () => {
+    const selected = equipSelect.value;
+    equipImg.src = equipImages[selected] || "";
+  });
+
+  equipImg.src = equipImages[equipSelect.value]; // 초기 이미지
+
+  // ===== 시작/목표 단계 & 비용 테이블 생성 =====
+  const startSelect = document.getElementById('startLvl');
+  const targetSelect = document.getElementById('targetLvl');
+  const costBody = document.getElementById('costTableBody');
+
+  for (let i=1; i<=15; i++){
+    const opt1 = document.createElement('option');
+    opt1.value = i;
+    opt1.text = i;
+    startSelect.add(opt1);
+
+    const opt2 = document.createElement('option');
+    opt2.value = i;
+    opt2.text = i;
+    targetSelect.add(opt2);
+
+    const tr = document.createElement('tr');
+    tr.innerHTML = `<td>${i}</td><td><input type="number" id="cost-${i}" /></td>`;
+    costBody.appendChild(tr);
+  }
+
+  // ===== 계산 함수 =====
+  function calculate() {
+    const start = parseInt(startSelect.value);
+    const target = parseInt(targetSelect.value);
+    if (target < start){
+      alert("목표 단계는 시작 단계 이상이어야 합니다.");
+      return;
     }
 
-    // ===== 계산 함수 =====
-    function calculate() {
-      const start = parseInt(startSelect.value);
-      const target = parseInt(targetSelect.value);
-      if (target < start){
-        alert("목표 단계는 시작 단계 이상이어야 합니다.");
-        return;
-      }
+    let totalCost = 0;
+    let successAccum = 1;
 
-      let totalCost = 0;
-      let successAccum = 1;
+    for (let i=start; i<=target; i++){
+      const cost = parseFloat(document.getElementById(`cost-${i}`).value) || 0;
+      const pSuccess = successRates[i-1];
+      const pBreak   = breakRates[i-1];
 
-      for (let i=start; i<=target; i++){
-        const cost = parseFloat(document.getElementById(`cost-${i}`).value) || 0;
-        const pSuccess = successRates[i-1];
-        const pBreak   = breakRates[i-1];
-
-        const expectedTries = 1 / pSuccess;
-        totalCost += expectedTries * cost;
-        successAccum *= (1 - pBreak);
-      }
-
-      document.getElementById('result').innerHTML = `
-        <h3>계산 결과</h3>
-        <p>총 예상 비용: <b>${totalCost.toLocaleString()}</b></p>
-        <p>파괴 미발생 누적 확률: <b>${(successAccum*100).toFixed(2)}%</b></p>
-      `;
+      const expectedTries = 1 / pSuccess;
+      totalCost += expectedTries * cost;
+      successAccum *= (1 - pBreak);
     }
-  </script>
+
+    document.getElementById('result').innerHTML = `
+      <h3>계산 결과</h3>
+      <p>총 예상 비용: <b>${totalCost.toLocaleString()}</b></p>
+      <p>파괴 미발생 누적 확률: <b>${(successAccum*100).toFixed(2)}%</b></p>
+    `;
+  }
+</script>
 </body>
 </html>
