--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
   const successRates = [0.95,0.9,0.85,0.8,0.75,0.7,0.65,0.6,0.55,0.5,0.45,0.4,0.35,0.3,0.25];
   const breakRates   = [0,0,0,0.01,0.02,0.03,0.05,0.07,0.1,0.12,0.15,0.18,0.2,0.25,0.3];
 
-  // ===== 이미지 매핑 =====
+  // ===== 이미지 매핑 (상대경로 기준) =====
   const equipImages = {
-    "머리": "DMO/IMG/head.png",
-    "가방": "DMO/IMG/bag.png",
-    "상의": "DMO/IMG/top.png",
-    "하의": "DMO/IMG/pants.png",
-    "신발": "DMO/IMG/shoes.png",
-    "장갑": "DMO/IMG/gloves.png"
+    "머리": "IMG/head.png",
+    "가방": "IMG/bag.png",
+    "상의": "IMG/top.png",
+    "하의": "IMG/pants.png",
+    "신발": "IMG/shoes.png",
+    "장갑": "IMG/gloves.png"
   };
 
   const equipSelect = document.getElementById("equipSelect");
