--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
     .grid { display:grid; grid-template-columns: 1fr; gap:16px; margin-bottom:20px; }
     .item-card { border:1px solid #ddd; border-radius:12px; padding:10px; text-align:center; }
     .item-card img { width:150px; height:150px; object-fit:contain; border:1px dashed #ccc; border-radius:8px; }
-    table { width:100%; border-collapse:collapse; margin-top:20px; }
-    th, td { border:1px solid #ddd; padding:8px; text-align:center; }
-    th { background:#f0f0f0; }
-    input, select { width:100%; box-sizing:border-box; padding:5px; }
+    select { width:100%; box-sizing:border-box; padding:5px; }
     .btn { margin-top:20px; padding:12px 20px; border:none; background:#2d7ff9; color:#fff; border-radius:10px; cursor:pointer; font-size:16px; }
     .result { margin-top:20px; padding:15px; background:#f1f8ff; border-radius:10px; }
   </style>
@@ -57,17 +54,6 @@
     </div>
   </div>
 
-  <h3>단계별 비용 입력</h3>
-  <table>
-    <thead>
-      <tr>
-        <th>단계</th>
-        <th>비용</th>
-      </tr>
-    </thead>
-    <tbody id="costTableBody"></tbody>
-  </table>
-
   <button class="btn" onclick="calculate()">기대값 계산</button>
 
   <div class="result" id="result"></div>
@@ -90,7 +76,6 @@
   equipSelect.addEventListener("change", () => {
     equipImg.src = equipImages[equipSelect.value] || "";
   });
-
   equipImg.src = equipImages[equipSelect.value];
 
   // ===== 강화 확률 하드코딩 =====
@@ -98,10 +83,12 @@
   const extraSuccess= [1.0,1.0,0.99,0.935,0.77,0.605,0.44,0.33,0.22,0.132,0.099,0.077,0.055,0.022,0.022];
   const breakRates = [0,0,0.01,0.02,0.03,0.05,0.07,0.1,0.12,0.15,0.18,0.2,0.25,0.3,0.35];
 
-  // ===== 시작/목표 단계 및 비용 테이블 =====
+  // ===== 비용 하드코딩 (단위: bit) =====
+  const costsBit = [1000,2000,5000,10000,20000,40000,80000,150000,300000,600000,1200000,2500000,5000000,10000000,20000000];
+
+  // ===== 단계 선택 =====
   const startSelect = document.getElementById('startLvl');
   const targetSelect = document.getElementById('targetLvl');
-  const costBody = document.getElementById('costTableBody');
 
   for (let i=1; i<=15; i++){
     const opt1 = document.createElement('option');
@@ -113,13 +100,18 @@
     opt2.value = i;
     opt2.text = i;
     targetSelect.add(opt2);
-
-    const tr = document.createElement('tr');
-    tr.innerHTML = `<td>${i}</td><td><input type="number" id="cost-${i}" value="${i*1000}" /></td>`; // 임시 비용
-    costBody.appendChild(tr);
   }
 
-  // ===== 계산 함수 =====
+  // ===== 비용 단위 변환 함수 =====
+  function formatCost(bit){
+    if(bit >= 1e12) return (bit/1e12).toFixed(2) + "T";
+    if(bit >= 1e9) return (bit/1e9).toFixed(2) + "G";
+    if(bit >= 1e6) return (bit/1e6).toFixed(2) + "M";
+    if(bit >= 1e3) return (bit/1e3).toFixed(2) + "K";
+    return bit + "bit";
+  }
+
+  // ===== 계산 =====
   function calculate(){
     const start = parseInt(startSelect.value);
     const target = parseInt(targetSelect.value);
@@ -130,22 +122,22 @@
       return;
     }
 
-    let totalCost = 0;
+    let totalCostBit = 0;
     let successAccum = 1;
 
     for(let i=start; i<=target; i++){
-      const cost = parseFloat(document.getElementById(`cost-${i}`).value) || 0;
+      const cost = costsBit[i-1];
       const pSuccess = useExtra ? extraSuccess[i-1] : baseSuccess[i-1];
       const pBreak = breakRates[i-1];
 
       const expectedTries = 1 / pSuccess;
-      totalCost += expectedTries * cost;
+      totalCostBit += expectedTries * cost;
       successAccum *= (1 - pBreak);
     }
 
     document.getElementById('result').innerHTML = `
       <h3>계산 결과</h3>
-      <p>총 예상 비용: <b>${totalCost.toLocaleString()}</b></p>
+      <p>총 예상 비용: <b>${formatCost(totalCostBit)}</b></p>
       <p>파괴 미발생 누적 확률: <b>${(successAccum*100).toFixed(2)}%</b></p>
     `;
   }
