--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
     <div style="display:flex; align-items:center; gap:5px;">
       <input type="checkbox" id="extraMat">
-      <label for="extraMat">추가 재료 사용</label>
+      <label for="extraMat">강화 해킹 툴 사용</label>
     </div>
   </div>
 
@@ -84,7 +84,23 @@
   const breakRates = [0,0,0.01,0.02,0.03,0.05,0.07,0.1,0.12,0.15,0.18,0.2,0.25,0.3,0.35];
 
   // ===== 비용 하드코딩 (단위: bit) =====
-  const costsBit = [1000,2000,5000,10000,20000,40000,80000,150000,300000,600000,1200000,2500000,5000000,10000000,20000000];
+  const costsBit = [
+    1_000_000_000_000,      // 1->2
+    1_200_000_000_000,      // 2->3
+    5_500_000_000_000,      // 3->4
+    8_000_000_000_000,      // 4->5
+    10_541_520_000_000,     // 5->6
+    12_000_000_000_000,     // 6->7
+    15_300_000_000_000,     // 7->8
+    18_000_000_000_000,     // 8->9
+    20_200_000_000_000,     // 9->10
+    30_784_610_000_000,     // 10->11
+    35_000_000_000_000,     // 11->12
+    40_770_000_000_000,     // 12->13
+    78_439_190_000_000,     // 13->14
+    90_000_000_000_000,     // 14->15
+    100_000_000_000_000     // 15->16
+  ];
 
   // ===== 단계 선택 =====
   const startSelect = document.getElementById('startLvl');
@@ -104,11 +120,11 @@
 
   // ===== 비용 단위 변환 함수 =====
   function formatCost(bit){
-    if(bit >= 1e12) return (bit/1e12).toFixed(2) + "T";
-    if(bit >= 1e9) return (bit/1e9).toFixed(2) + "G";
-    if(bit >= 1e6) return (bit/1e6).toFixed(2) + "M";
-    if(bit >= 1e3) return (bit/1e3).toFixed(2) + "K";
-    return bit + "bit";
+    const T = Math.floor(bit / 1e12);
+    bit -= T*1e12;
+    const M = Math.floor(bit / 1e6);
+    bit -= M*1e6;
+    return `${T ? T + 'T ' : ''}${M ? M + 'M ' : ''}${bit ? bit + 'Bit' : ''}`.trim();
   }
 
   // ===== 계산 =====
