--- a/index.html
+++ b/index.html
@@ -70,8 +70,10 @@
     <thead>
       <tr>
         <th>단계</th>
-        <th>기본 성공 확률</th>
+        <th>성공 확률</th>
+        <th>실패 확률</th>
         <th>강화 해킹 툴 사용 시 성공 확률</th>
+        <th>강화 해킹 툴 사용 시 실패 확률</th>
         <th>파괴 확률</th>
       </tr>
     </thead>
@@ -101,7 +103,7 @@
   const extraSuccess= [1.0,1.0,0.99,0.935,0.77,0.605,0.44,0.33,0.22,0.132,0.099,0.077,0.055,0.033,0.022];
   const breakRates = [0,0,0,0,0.05,0.1,0.1,0.1,0.1,0.3,0.41,0.47,0.6,0.67,0.78];
 
-  // ===== 비용 하드코딩 (단위: Bit 기준, 예시) =====
+  // ===== 비용 하드코딩 (Bit 단위 예시) =====
   const costsBit = [
     1000000000, // 0->1
     1200000000,
@@ -144,14 +146,18 @@
     return `${t ? t + 'T ' : ''}${m ? m + 'M ' : ''}${b ? b + 'Bit' : ''}`.trim();
   }
 
-  // ===== 강화 단계 설명 테이블 채우기 (0->1,1->2 ...) =====
+  // ===== 강화 단계 설명 테이블 채우기 =====
   const tbody = document.querySelector("#infoTable tbody");
   for(let i=0;i<15;i++){
+    const failBase = (1 - baseSuccess[i] - breakRates[i])*100;
+    const failExtra = (1 - extraSuccess[i] - breakRates[i])*100;
     const tr = document.createElement("tr");
     tr.innerHTML = `
       <td>${i} → ${i+1}</td>
       <td>${(baseSuccess[i]*100).toFixed(1)}%</td>
+      <td>${failBase.toFixed(1)}%</td>
       <td>${(extraSuccess[i]*100).toFixed(1)}%</td>
+      <td>${failExtra.toFixed(1)}%</td>
       <td>${(breakRates[i]*100).toFixed(1)}%</td>
     `;
     tbody.appendChild(tr);
