--- a/index.html
+++ b/index.html
@@ -106,20 +106,20 @@
 
   // ===== 비용 Bit 단위 하드코딩 (T=1,000,000 Bit, M=1,000 Bit) =====
   const costsBit = [
-    5500000,    // 0->1 : 5T 500M 0Bit
+    5500000,    // 0->1 : 5T 500M 0Bit(완료)
     6000000,
     5500000,
     8000000,
     10541520,   // 4->5
-    10541520,   // 5->6 : 10T 541M 520Bit
+    10541520,   // 5->6 : 10T 541M 520Bit(완료)
     15300000,
     18000000,
     20200000,
     30784610,   // 9->10
-    30784610,   // 10->11 : 30T 784M 610Bit
+    30784610,   // 10->11 : 30T 784M 610Bit(완료)
     40770000,
-    78439190,   // 12->13
-    90000000,
+    50000000,   
+    78439190,   // 13->14(완료)
     95000000    // 14->15
   ];
 
@@ -185,3 +185,4 @@
 </script>
 </body>
 </html>
+
