--- a/index.html
+++ b/index.html
@@ -107,20 +107,20 @@
   // ===== 비용 Bit 단위 하드코딩 (T=1,000,000 Bit, M=1,000 Bit) =====
   const costsBit = [
     5500000,    // 0->1 : 5T 500M 0Bit(완료)
-    6000000,
-    5500000,
-    8000000,
-    10541520,   // 4->5
+    6050000,    // 1->2 : 6T 050M 0Bit(완료)
+    6655000,    // 2->3 : 6T 655M 0Bit(완료)
+    7320500,    // 3->4 : 7T 320M 500Bit(완료)
+    8784600,    // 4->5 : 8T 784M 600Bit(완료)
     10541520,   // 5->6 : 10T 541M 520Bit(완료)
-    15300000,
-    18000000,
-    20200000,
-    30784610,   // 9->10
+    12649820,   // 6->7 : 12T 649M 820Bit(완료)
+    15179790,   // 7->8 : 15T 179M 790Bit(완료)
+    18215750,   // 8->9 : 18T 215M 750Bit(완료)
+    23680470,   // 9->10 : 23T 680M 470Bit(완료)
     30784610,   // 10->11 : 30T 784M 610Bit(완료)
-    40020000,   // 11->12(완료)
-    50000000,   
-    78439190,   // 13->14(완료)
-    95000000    // 14->15
+    40020000,   // 11->12 : 40T 020M 000Bit(완료)
+    56027990,   // 12->13 : 56T 027M 990Bit(완료)
+    78439190,   // 13->14 : 78T 439M 190Bit(완료)
+    117658800    // 14->15 : 117T 658M 800Bit(완료)
   ];
 
   // ===== 단계 선택 =====
@@ -185,5 +185,6 @@
 </script>
 </body>
 </html>
+
 
 
