--- a/index.html
+++ b/index.html
@@ -1,147 +1,49 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-<meta charset="UTF-8">
-<title>디지몬 마스터즈 장비 강화 기대값 계산기</title>
-<style>
-  body { font-family: sans-serif; background:#f7f7f7; padding:20px; }
-  .container { max-width:900px; margin:auto; background:#fff; padding:20px; border-radius:12px; box-shadow:0 2px 10px rgba(0,0,0,0.05); }
-  .grid { display:grid; grid-template-columns: 1fr; gap:16px; margin-bottom:20px; }
-  .item-card { border:1px solid #ddd; border-radius:12px; padding:10px; text-align:center; }
-  .item-card img { width:150px; height:150px; object-fit:contain; border:1px dashed #ccc; border-radius:8px; }
-  select { width:100%; box-sizing:border-box; padding:5px; }
-  .btn { margin-top:20px; padding:12px 20px; border:none; background:#2d7ff9; color:#fff; border-radius:10px; cursor:pointer; font-size:16px; }
-  .result { margin-top:20px; padding:15px; background:#f1f8ff; border-radius:10px; }
-  table { width:100%; border-collapse:collapse; margin-top:20px; }
-  th, td { border:1px solid #ddd; padding:8px; text-align:center; }
-  th { background:#f0f0f0; }
-</style>
-</head>
-<body>
-<div class="container">
-  <h1>디지몬 마스터즈 장비 강화 기대값 계산기</h1>
+// ===== 장비별 강화 비용 및 재료 =====
+const equipCosts = {
+  "기본": [
+    {bit:5500000, material:""},
+    {bit:6050000, material:""},
+    {bit:6655000, material:""},
+    {bit:7320500, material:""},
+    {bit:8784600, material:""},
+    {bit:10541520, material:""},
+    {bit:12649820, material:""},
+    {bit:15179790, material:""},
+    {bit:18215750, material:""},
+    {bit:23680470, material:""},
+    {bit:30784610, material:""},
+    {bit:40020000, material:""},
+    {bit:56027990, material:""},
+    {bit:78439190, material:""},
+    {bit:117658800, material:""}
+  ],
+  "고스트 키링": [
+    {bit:10000000, material:"나이프1 10t"},
+    {bit:11000000, material:"나이프1 11t"},
+    {bit:12100000, material:"나이프1 12.1t"},
+    {bit:13310000, material:"나이프1 13.31t"},
+    {bit:15972000, material:"나이프2 15.972t"},
+    {bit:19166400, material:"나이프2 19.166.4t"},
+    {bit:22999680, material:"나이프2 22.999.680t"},
+    {bit:27599620, material:"나이프2 27.599.620t"},
+    {bit:33119540, material:"나이프2 33.119.540t"},
+    {bit:43055400, material:"나이프3 43.055.400t"},
+    {bit:0, material:""}, // 10->11 이후는 임의로 0
+    {bit:0, material:""},
+    {bit:0, material:""},
+    {bit:0, material:""},
+    {bit:0, material:""}
+  ]
+};
 
-  <h3>장비 선택</h3>
-  <div>
-    <label for="equipSelect">장비 부위:</label>
-    <select id="equipSelect">
-      <option value="머리">머리</option>
-      <option value="가방">가방</option>
-      <option value="상의">상의</option>
-      <option value="하의">하의</option>
-      <option value="신발">신발</option>
-      <option value="장갑">장갑</option>
-    </select>
-  </div>
-
-  <div class="grid">
-    <div class="item-card">
-      <div>장비 그림</div>
-      <img id="equip-img" src="" alt="장비 이미지">
-    </div>
-  </div>
-
-  <h3>강화 단계 설정</h3>
-  <div style="display:flex; gap:10px; margin-bottom:10px;">
-    <div>
-      <label for="startLvl">시작 단계:</label>
-      <select id="startLvl"></select>
-    </div>
-    <div>
-      <label for="targetLvl">목표 단계:</label>
-      <select id="targetLvl"></select>
-    </div>
-    <div style="display:flex; align-items:center; gap:5px;">
-      <input type="checkbox" id="extraMat">
-      <label for="extraMat">강화 해킹 툴 사용</label>
-    </div>
-  </div>
-
-  <div style="margin-bottom:20px;">
-    <strong>※ 강화 백업 칩 사용 필수:</strong> 파괴를 방지해줍니다.
-  </div>
-
-  <button class="btn" onclick="calculate()">기대값 계산</button>
-
-  <div class="result" id="result"></div>
-
-  <h3>강화 단계 설명</h3>
-  <table id="infoTable">
-    <thead>
-      <tr>
-        <th>단계</th>
-        <th>성공 확률</th>
-        <th>실패 확률</th>
-        <th>강화 해킹 툴 사용 시 성공 확률</th>
-        <th>강화 해킹 툴 사용 시 실패 확률</th>
-        <th>파괴 확률</th>
-        <th>단계별 강화 비용</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-</div>
-
-<script>
-  // ===== 이미지 매핑 =====
-  const equipImages = {
-    "머리": "IMG/head.png",
-    "가방": "IMG/bag.png",
-    "상의": "IMG/top.png",
-    "하의": "IMG/pants.png",
-    "신발": "IMG/shoes.png",
-    "장갑": "IMG/gloves.png"
-  };
-  const equipSelect = document.getElementById("equipSelect");
-  const equipImg = document.getElementById("equip-img");
-  equipSelect.addEventListener("change", () => {
-    equipImg.src = equipImages[equipSelect.value] || "";
-  });
-  equipImg.src = equipImages[equipSelect.value];
-
-  // ===== 강화 확률 하드코딩 =====
-  const baseSuccess = [1.0,1.0,0.9,0.85,0.7,0.55,0.4,0.3,0.2,0.12,0.09,0.07,0.05,0.03,0.02];
-  const extraSuccess= [1.0,1.0,0.99,0.935,0.77,0.605,0.44,0.33,0.22,0.132,0.099,0.077,0.055,0.033,0.022];
-  const breakRates = [0,0,0,0,0.05,0.1,0.1,0.1,0.1,0.3,0.41,0.47,0.6,0.67,0.78];
-
-  // ===== 비용 Bit 단위 하드코딩 (T=1,000,000 Bit, M=1,000 Bit) =====
-  const costsBit = [
-    5500000,    // 0->1 : 5T 500M 0Bit(완료)
-    6050000,    // 1->2 : 6T 050M 0Bit(완료)
-    6655000,    // 2->3 : 6T 655M 0Bit(완료)
-    7320500,    // 3->4 : 7T 320M 500Bit(완료)
-    8784600,    // 4->5 : 8T 784M 600Bit(완료)
-    10541520,   // 5->6 : 10T 541M 520Bit(완료)
-    12649820,   // 6->7 : 12T 649M 820Bit(완료)
-    15179790,   // 7->8 : 15T 179M 790Bit(완료)
-    18215750,   // 8->9 : 18T 215M 750Bit(완료)
-    23680470,   // 9->10 : 23T 680M 470Bit(완료)
-    30784610,   // 10->11 : 30T 784M 610Bit(완료)
-    40020000,   // 11->12 : 40T 020M 000Bit(완료)
-    56027990,   // 12->13 : 56T 027M 990Bit(완료)
-    78439190,   // 13->14 : 78T 439M 190Bit(완료)
-    117658800    // 14->15 : 117T 658M 800Bit(완료)
-  ];
-
-  // ===== 단계 선택 =====
-  const startSelect = document.getElementById('startLvl');
-  const targetSelect = document.getElementById('targetLvl');
-  for (let i=0;i<=15;i++){
-    const opt1 = document.createElement('option'); opt1.value=i; opt1.text=i; startSelect.add(opt1);
-    const opt2 = document.createElement('option'); opt2.value=i; opt2.text=i; targetSelect.add(opt2);
-  }
-
-  // ===== 비용 단위 변환 함수 =====
-  function formatCost(bit){
-    let m = Math.floor(bit / 1000);
-    let b = bit % 1000;
-    let t = Math.floor(m / 1000);
-    m = m % 1000;
-    return `${t ? t + 'T ' : ''}${m ? m + 'M ' : ''}${b ? b + 'Bit' : ''}`.trim();
-  }
-
-  // ===== 강화 단계 설명 테이블 =====
+// ===== 강화 단계 설명 테이블 =====
+function updateTable() {
   const tbody = document.querySelector("#infoTable tbody");
+  tbody.innerHTML = ""; // 초기화
+
+  const equip = equipSelect.value;
+  const costs = equip === "고스트 키링" ? equipCosts["고스트 키링"] : equipCosts["기본"];
+
   for(let i=0;i<15;i++){
     const failBase = (1 - baseSuccess[i] - breakRates[i])*100;
     const failExtra = (1 - extraSuccess[i] - breakRates[i])*100;
@@ -153,38 +55,45 @@
       <td>${(extraSuccess[i]*100).toFixed(1)}%</td>
       <td>${failExtra.toFixed(1)}%</td>
       <td>${(breakRates[i]*100).toFixed(1)}%</td>
-      <td>${formatCost(costsBit[i])}</td>
+      <td>${formatCost(costs[i].bit)} ${costs[i].material}</td>
     `;
     tbody.appendChild(tr);
   }
+}
 
-  // ===== 계산 =====
-  function calculate(){
-    const start = parseInt(startSelect.value);
-    const target = parseInt(targetSelect.value);
-    const useExtra = document.getElementById('extraMat').checked;
+// ===== 계산 함수 수정 =====
+function calculate(){
+  const start = parseInt(startSelect.value);
+  const target = parseInt(targetSelect.value);
+  const useExtra = document.getElementById('extraMat').checked;
 
-    if(target <= start){
-      alert("목표 단계는 시작 단계보다 커야 합니다.");
-      return;
-    }
-
-    let totalCostBit = 0;
-    for(let i=start;i<target;i++){
-      const cost = costsBit[i];
-      const pSuccess = useExtra ? extraSuccess[i] : baseSuccess[i];
-      const expectedTries = 1 / pSuccess;
-      totalCostBit += expectedTries * cost;
-    }
-
-    document.getElementById('result').innerHTML = `
-      <h3>계산 결과</h3>
-      <p>총 예상 비용: <b>${formatCost(Math.round(totalCostBit))}</b></p>
-    `;
+  if(target <= start){
+    alert("목표 단계는 시작 단계보다 커야 합니다.");
+    return;
   }
-</script>
-</body>
-</html>
 
+  const equip = equipSelect.value;
+  const costs = equip === "고스트 키링" ? equipCosts["고스트 키링"] : equipCosts["기본"];
+  let totalCostBit = 0;
+  let totalMaterials = {};
 
+  for(let i=start;i<target;i++){
+    const cost = costs[i].bit;
+    const pSuccess = useExtra ? extraSuccess[i] : baseSuccess[i];
+    const expectedTries = 1 / pSuccess;
+    totalCostBit += expectedTries * cost;
 
+    if(costs[i].material){
+      const matName = costs[i].material;
+      totalMaterials[matName] = (totalMaterials[matName] || 0) + expectedTries;
+    }
+  }
+
+  let materialStr = Object.entries(totalMaterials).map(([k,v]) => `${k} x${v.toFixed(2)}`).join(", ");
+
+  document.getElementById('result').innerHTML = `
+    <h3>계산 결과</h3>
+    <p>총 예상 비용: <b>${formatCost(Math.round(totalCostBit))}</b></p>
+    <p>필요 재료: <b>${materialStr || "없음"}</b></p>
+  `;
+}
