--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <option value="하의">하의</option>
       <option value="신발">신발</option>
       <option value="장갑">장갑</option>
-      <option value="고스트 키링">고스트 키링</option>
+      <option value="고스트키링">고스트 키링</option>
     </select>
   </div>
 
@@ -76,7 +76,8 @@
         <th>강화 해킹 툴 사용 시 성공 확률</th>
         <th>강화 해킹 툴 사용 시 실패 확률</th>
         <th>파괴 확률</th>
-        <th>단계별 강화 비용/재료</th>
+        <th>단계별 강화 비용</th>
+        <th>단계별 필요 재료</th>
       </tr>
     </thead>
     <tbody></tbody>
@@ -92,13 +93,13 @@
     "하의": "IMG/pants.png",
     "신발": "IMG/shoes.png",
     "장갑": "IMG/gloves.png",
-    "고스트 키링": "IMG/ghostkeyring.png"
+    "고스트키링": "IMG/ghostkeyring.png"
   };
   const equipSelect = document.getElementById("equipSelect");
   const equipImg = document.getElementById("equip-img");
   equipSelect.addEventListener("change", () => {
     equipImg.src = equipImages[equipSelect.value] || "";
-    updateTable();
+    renderInfoTable();
   });
   equipImg.src = equipImages[equipSelect.value];
 
@@ -107,43 +108,21 @@
   const extraSuccess= [1.0,1.0,0.99,0.935,0.77,0.605,0.44,0.33,0.22,0.132,0.099,0.077,0.055,0.033,0.022];
   const breakRates = [0,0,0,0,0.05,0.1,0.1,0.1,0.1,0.3,0.41,0.47,0.6,0.67,0.78];
 
-  // ===== 장비별 강화 비용 및 재료 =====
-  const equipCosts = {
-    "기본": [
-      {bit:5500000, material:""},
-      {bit:6050000, material:""},
-      {bit:6655000, material:""},
-      {bit:7320500, material:""},
-      {bit:8784600, material:""},
-      {bit:10541520, material:""},
-      {bit:12649820, material:""},
-      {bit:15179790, material:""},
-      {bit:18215750, material:""},
-      {bit:23680470, material:""},
-      {bit:30784610, material:""},
-      {bit:40020000, material:""},
-      {bit:56027990, material:""},
-      {bit:78439190, material:""},
-      {bit:117658800, material:""}
-    ],
-    "고스트 키링": [
-      {bit:10000000, material:"나이프1 10t"},
-      {bit:11000000, material:"나이프1 11t"},
-      {bit:12100000, material:"나이프1 12.1t"},
-      {bit:13310000, material:"나이프1 13.31t"},
-      {bit:15972000, material:"나이프2 15.972t"},
-      {bit:19166400, material:"나이프2 19.166.4t"},
-      {bit:22999680, material:"나이프2 22.999.680t"},
-      {bit:27599620, material:"나이프2 27.599.620t"},
-      {bit:33119540, material:"나이프2 33.119.540t"},
-      {bit:43055400, material:"나이프3 43.055.400t"},
-      {bit:0, material:""},
-      {bit:0, material:""},
-      {bit:0, material:""},
-      {bit:0, material:""},
-      {bit:0, material:""}
-    ]
-  };
+  // ===== 장비별 강화 비용 =====
+  const defaultCosts = [
+    {bit:5500000}, {bit:6050000}, {bit:6655000}, {bit:7320500}, {bit:8784600},
+    {bit:10541520}, {bit:12649820}, {bit:15179790}, {bit:18215750}, {bit:23680470},
+    {bit:30784610}, {bit:40020000}, {bit:56027990}, {bit:78439190}, {bit:117658800}
+  ];
+
+  const ghostKeyringCosts = [
+    {bit:10000000, material:"나이프1"}, {bit:11000000, material:"나이프1"}, {bit:12100000, material:"나이프1"},
+    {bit:13310000, material:"나이프1"}, {bit:15972000, material:"나이프2"}, {bit:19166400, material:"나이프2"},
+    {bit:22999680, material:"나이프2"}, {bit:27599620, material:"나이프2"}, {bit:33119540, material:"나이프2"},
+    {bit:43055400, material:"나이프3"}, {bit:50000000, material:"나이프3"}, {bit:55000000, material:"나이프3"},
+    {bit:60000000, material:"나이프3"}, {bit:70000000, material:"나이프4"}, {bit:80000000, material:"나이프4"},
+    {bit:90000000, material:"나이프4"}
+  ];
 
   // ===== 단계 선택 =====
   const startSelect = document.getElementById('startLvl');
@@ -162,17 +141,18 @@
     return `${t ? t + 'T ' : ''}${m ? m + 'M ' : ''}${b ? b + 'Bit' : ''}`.trim();
   }
 
-  // ===== 강화 단계 설명 테이블 =====
-  function updateTable() {
+  // ===== 강화 단계 설명 테이블 렌더링 =====
+  function renderInfoTable(){
     const tbody = document.querySelector("#infoTable tbody");
-    tbody.innerHTML = ""; // 초기화
-
+    tbody.innerHTML = "";
     const equip = equipSelect.value;
-    const costs = equip === "고스트 키링" ? equipCosts["고스트 키링"] : equipCosts["기본"];
+    const costs = (equip==="고스트키링") ? ghostKeyringCosts : defaultCosts;
 
     for(let i=0;i<15;i++){
       const failBase = (1 - baseSuccess[i] - breakRates[i])*100;
       const failExtra = (1 - extraSuccess[i] - breakRates[i])*100;
+      const materialStr = costs[i].material || "-";
+
       const tr = document.createElement("tr");
       tr.innerHTML = `
         <td>${i} → ${i+1}</td>
@@ -181,28 +161,28 @@
         <td>${(extraSuccess[i]*100).toFixed(1)}%</td>
         <td>${failExtra.toFixed(1)}%</td>
         <td>${(breakRates[i]*100).toFixed(1)}%</td>
-        <td>${formatCost(costs[i].bit)} ${costs[i].material}</td>
+        <td>${formatCost(costs[i].bit)}</td>
+        <td>${materialStr}</td>
       `;
       tbody.appendChild(tr);
     }
   }
 
-  // 초기 테이블 로드
-  updateTable();
+  renderInfoTable();
 
-  // ===== 계산 함수 =====
+  // ===== 기대값 계산 =====
   function calculate(){
     const start = parseInt(startSelect.value);
     const target = parseInt(targetSelect.value);
     const useExtra = document.getElementById('extraMat').checked;
+    const equip = equipSelect.value;
+    const costs = (equip==="고스트키링") ? ghostKeyringCosts : defaultCosts;
 
     if(target <= start){
       alert("목표 단계는 시작 단계보다 커야 합니다.");
       return;
     }
 
-    const equip = equipSelect.value;
-    const costs = equip === "고스트 키링" ? equipCosts["고스트 키링"] : equipCosts["기본"];
     let totalCostBit = 0;
     let totalMaterials = {};
 
@@ -212,19 +192,24 @@
       const expectedTries = 1 / pSuccess;
       totalCostBit += expectedTries * cost;
 
+      // 고스트키링 재료 계산
       if(costs[i].material){
-        const matName = costs[i].material;
-        totalMaterials[matName] = (totalMaterials[matName] || 0) + expectedTries;
+        const match = costs[i].material.match(/나이프(\d+)/);
+        if(match){
+          const count = parseInt(match[1]);
+          totalMaterials["나이프"] = (totalMaterials["나이프"] || 0) + expectedTries * count;
+        }
       }
     }
 
     let materialStr = Object.entries(totalMaterials)
-      .map(([k,v]) => `${k} x${v.toFixed(2)}`).join(", ");
+      .map(([k,v]) => `${k} x${v.toFixed(2)}`)
+      .join(", ");
 
     document.getElementById('result').innerHTML = `
       <h3>계산 결과</h3>
       <p>총 예상 비용: <b>${formatCost(Math.round(totalCostBit))}</b></p>
-      <p>필요 재료: <b>${materialStr || "없음"}</b></p>
+      ${materialStr ? `<p>총 필요 재료: <b>${materialStr}</b></p>` : ""}
     `;
   }
 </script>
