--- a/index.html
+++ b/index.html
@@ -119,9 +119,8 @@
     {bit:10000000, material:"나이프1"}, {bit:11000000, material:"나이프1"}, {bit:12100000, material:"나이프1"},
     {bit:13310000, material:"나이프1"}, {bit:15972000, material:"나이프2"}, {bit:19166400, material:"나이프2"},
     {bit:22999680, material:"나이프2"}, {bit:27599620, material:"나이프2"}, {bit:33119540, material:"나이프2"},
-    {bit:43055400, material:"나이프3"}, {bit:55972020, material:"나이프3"}, {bit:55000000, material:"나이프3"},
-    {bit:60000000, material:"나이프3"}, {bit:70000000, material:"나이프4"}, {bit:80000000, material:"나이프4"},
-    {bit:213925100, material:"나이프5"}
+    {bit:43055400, material:"나이프3"}, {bit:55972020, material:"나이프3"}, {bit:90000000, material:"나이프3"},
+    {bit:100000000, material:"나이프3"}, {bit:150000000, material:"나이프4"}, {bit:213925100, material:"나이프5"}
   ];
 
   // ===== 단계 선택 =====
@@ -215,4 +214,5 @@
 </script>
 </body>
 </html>
+
 
